# read-aloud-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  biome.json  docker-compose.yml  install-service.sh  install-user-service.sh  package.json  pyproject.toml  uninstall-service.sh
.claude/: settings.local.json
scripts/: call_read_aloud.py
src/: main.ts
src/audio/: manager.ts  noop-manager.ts  types.ts
src/mcp_tts_server/: __init__.py  server.py  tts_handler.py
src/server/: mcp-server.ts
src/tools/: read-aloud.ts  types.ts
src/tts/: say-engine.ts  types.ts
