[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_tts_server"]

[project]
name = "read-aloud-mcp"
version = "0.1.0"
description = "MCP server for text-to-speech with Chatterbox TTS"
authors = [{name = "User"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "simpleaudio>=1.0.0",
    "chatterbox-tts>=0.1.0",
    "torchaudio>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "types-setuptools",
    "ruff>=0.1.0",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["E501", "E203"]

[tool.ruff.isort]
known-first-party = ["mcp_tts_server"]

[project.scripts]
read-aloud-mcp = "mcp_tts_server.server:main"